  ###################################
##### Changed in Scannomatic 0.993 #####
   ###################################

*** Minor adjustment to experiment pinning matrix dropdowns

*** Running project analysis now reports if anything bad happened.

*** Warning message if serveral instances of the program is running in parallell.

*** runtime.log gets all logging messages and is overwritten at each start-up

*** Changed the DMS of Scan-o-Matic to have better naming of where things
    should be reported. Dialogs also take appropriate icons.

*** Implemented custom uncaught exception hook

*** Renamed Aquire One... to 'Drop Test'

*** Added Pigmentation Scan feature

*** Analysis corrects grids according to its knowledge of how it should be
    if it gets odd results.

*** Added manual grid to analysis / GUI and command line

*** Implemented GUI for regridding

*** Migrated number of scanners to main.config

*** Implemented a Force Unclaim Scanner possibility

*** Implemented an abort running analysis

*** Implemented nicer program terminate to catch all ongoing processes.

*** Moved the gridding out of the analysis-path so grids can be set manually

*** Analysis script writes logging-info to the analysis.run - file of designated
    output directory

*** Fixture-configurations record the history of the top-left placement of the grid
    per pinning-matrix format.

*** Projects have UUID:s.

*** Changed crash test dummy marker detection aglorithm so it is simple, faster
    and robuster.

  ###################################
##### Changed in Scannomatic 0.992 #####
   ###################################

*** Improved messages when running experiments and single scans. Also tweaked and
    fixed a bug or so.

*** Improved robustness of orthalogical grayscale detection

*** Improved Analyse One interface so it responds more 'correctly' to grayscale
    detections

*** Added nicer pinning matrix override GUI to analyse project
